# mancala

./: .gitmodules  CMakeLists.txt  README.md
notes/: HEURISTICS_IDEAS  WHEN_TO_PIE
src/arena/: main.cpp
src/bot/: main.cpp
src/mancala/: Agent.hpp  Board.cpp  Board.hpp  FinalAgent.cpp  FinalAgent.hpp  Game.cpp  Game.hpp  MCAgent.cpp  MCAgent.hpp  MCAgentImplicitHeuristics.cpp  MCAgentImplicitHeuristics.hpp  MiniMaxAgent.cpp  MiniMaxAgent.hpp  RandomAgent.cpp  RandomAgent.hpp  SavageAgent.cpp  SavageAgent.hpp  UserAgent.cpp  UserAgent.hpp  binutils.cpp  binutils.hpp  books.cpp  books.hpp  input.cpp  input.hpp  output.cpp  output.hpp
src/util/: countatdepth.cpp  endgame.cpp  opening.cpp  testbinbooks.cpp  when2pie.cpp
test/: all_tests.cpp  board_tests.cpp  game_tests.cpp  io_tests.cpp
